syntax = "proto3";
package resume;
option go_package = "./";

service Resume{
  rpc RequestLogging(RequestParam) returns(RequestReply){}//记录请求
  rpc GetBaseInfo(BaseInfoRequest) returns(BaseInfoReply){}//获取基本信息
  rpc GetResumeInfo(ResumeInfoRequest) returns(ResumeInfoReply){}//获取简历信息
};
//-----------------------记录请求 start------------------
message RequestParam{
  string server_name = 1;
  string ip = 2;
  string ip_addr = 3;
  string result = 4;
}
message RequestReply{
  string name = 1;
  string message = 2;
}
//-----------------------记录请求 end------------------

//-----------------------获取基本信息 start------------------
message BaseInfoRequest{
  string name = 1;
  string message = 2;
}
message OutBaseInfo{
  string id = 1;
  string v_name = 2;
  string v_sex = 3;
  string v_phone = 4;
  string v_age = 5;
  string v_email = 6;
  string v_education = 7;
}
message BaseInfoReply{
  string name = 1;
  string message = 2;
  repeated OutBaseInfo data = 3;
}
//-----------------------获取基本信息 end------------------

//-----------------------获取简历信息 start------------------
message ResumeInfoRequest{
  string name = 1;
  string message = 2;
  string search_key = 3;
}
message OutResumeInfo{
  string id = 1;
  string v_base_id = 2;
  string v_start_date = 3;
  string v_end_date = 4;
  string v_word_content = 5;
  string v_position = 6;
}
message ResumeInfoReply{
  string name = 1;
  string message = 2;
  repeated OutResumeInfo data = 3;
}
//-----------------------获取简历信息 end------------------
